Update styles; prevent double scrollbars.

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -16,5 +16,8 @@
 }
 
 .app-body {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
+  overflow-y: auto;
 }
